--- a/debian/control
+++ b/debian/control
@@ -3,22 +3,22 @@ Maintainer: Marco Bardelli <bardelli.marco@gmail.com>
 Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9), dh-python, quilt, python-all (>= 2.6.6-3),
-# python3-all, python3-six, python-six
+ python3-all, python3-six, python-six
 Standards-Version: 3.9.5
 Homepage: https://github.com/spanezz/django-housekeeping
 X-Python-Version: >= 2.6
-#X-Python3-Version: >= 3.2
+X-Python3-Version: >= 3.2
 
 Package: python-django-housekeeping
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
-# python-six
+ python-six
 Description: Pluggable housekeeping framework for Django sites
  Extensible framework to manage inter-dependents tasks execution.
 
-# Package: python3-django-housekeeping
-# Architecture: all
-# Depends: ${misc:Depends}, ${python3:Depends},
-#  python3-six
-# Description: Pluggable housekeeping framework for Django sites
-#  Extensible framework to manage inter-dependents tasks execution.
+Package: python3-django-housekeeping
+Architecture: all
+Depends: ${misc:Depends}, ${python3:Depends},
+ python3-six
+Description: Pluggable housekeeping framework for Django sites
+ Extensible framework to manage inter-dependents tasks execution.
